bk_ida/gccida/g2/asm_fprintf
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/asm_fprintf/src/final.c:4017:8: error: use of undeclared identifier 'sch_istable'; did you mean '_sch_istable'?
if ( ( sch_istable[v6] & 4) == 0 ) 
       ^~~~~~~~~~~
       _sch_istable
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/asm_fprintf/src/safe-ctype.h:72:29: note: '_sch_istable' declared here
extern const unsigned short _sch_istable[256];
                            ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/asm_fprintf/src/final.c:4029:11: error: use of undeclared identifier 'sch_istable'; did you mean '_sch_istable'?
while ( ( sch_istable[v8] & 4) != 0 ); 
          ^~~~~~~~~~~
          _sch_istable
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/asm_fprintf/src/safe-ctype.h:72:29: note: '_sch_istable' declared here
extern const unsigned short _sch_istable[256];
                            ^
2 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/asm_fprintf/src/obj/final.o] Error 1
